<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_bean_dialog"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bean_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/customer_bean_explain"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:src="@drawable/icon_bean_close" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/customer_bean_keep"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_bean_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/customer_can_use_beans"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_bean_can"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="48dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/customer_bean_all"
            android:textColor="@color/color_f28146"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_bean_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_f28146"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="48dp"
        android:text="@string/customer_bean_keep_explain"
        android:textColor="@color/black_text_color"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="48dp"
        android:text="@string/customer_bean_can_explain"
        android:textColor="@color/black_text_color"
        android:textSize="14sp" />

</LinearLayout>