<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/bg_bean_title">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="14dp"
            android:src="@drawable/icon_top_return_white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:drawableRight="@drawable/ic_arrow_down"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone" />

    </RelativeLayout>

    <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
        android:id="@+id/rv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_change"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_can_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:drawableStart="@drawable/icon_bean_small"
                android:drawableLeft="@drawable/icon_bean_small"
                android:drawablePadding="4dp"
                android:text="@string/customer_can_use_bean"
                android:textColor="@color/black_text_color"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/icon_bean_question"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.BeeFramework.view.ClearEditText
                android:id="@+id/et_change_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:focusableInTouchMode="true"
                android:hint="@string/customer_input_num"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black_text_color"
                android:textColorHint="@color/edit_text_color"
                android:textSize="16sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_most"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/pop_all"
                android:textColor="@color/color_f28146"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:background="@drawable/text_change"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/customer_change"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rule"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@null"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_sign1"
            android:textColor="@color/black_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            android:text="@string/customer_sign2"
            android:textColor="@color/grayred_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/customer_sign3"
            android:textColor="@color/black_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            android:text="@string/customer_sign4"
            android:textColor="@color/grayred_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/customer_sign5"
            android:textColor="@color/grayred_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/customer_sign6"
            android:textColor="@color/black_text_color"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>